<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.opencharge.opencharge.presentation.fragments.CreateServiceFragment"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dia"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/seleccionar_data"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hora_inici"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/ini"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/seleccionar_hora"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hora_fi"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/fi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/seleccionar_hora"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repetir"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/mon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dilluns"/>

                <CheckBox
                    android:id="@+id/tue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dimarts"/>

                <CheckBox
                    android:id="@+id/wed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dimecres"/>

                <CheckBox
                    android:id="@+id/thu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dijous"/>

                <CheckBox
                    android:id="@+id/fri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/divendres"/>

                <CheckBox
                    android:id="@+id/sat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dissabte"/>

                <CheckBox
                    android:id="@+id/sun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diumenge"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/endLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fins_el_dia"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/dateEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/seleccionar_data"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:layout_weight="1" />

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:layout_weight="1" />

        </LinearLayout>



    </LinearLayout>

</FrameLayout>