<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/el_meu_perfil" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/mapa" />
        <item
            android:id="@+id/nav_newpoint"
            android:icon="@drawable/ic_menu_add_point"
            android:title="@string/crear_punt" />

    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_help"
                android:title="Help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="About" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="Logout" />
        </menu>
    </item>

</menu>
