<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/addcoment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text_size"
        android:text="@string/comment" />

    <EditText
        android:id="@+id/commentBox"
        android:layout_width="fill_parent"
        android:layout_height="150dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:ems="150"
        android:gravity="left|top"
        android:hint="@string/comment_hint"
        android:inputType="textMultiLine|textCapSentences"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:textSize="20sp" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />

        <Button
            android:id="@+id/sendBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            style="@style/Widget.AppCompat.Button.Colored" />

    </LinearLayout>


</LinearLayout>