<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.opencharge.opencharge.presentation.fragments.CreatePublicPointsFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:id="@+id/scrollView">
        <LinearLayout
            android:id="@+id/widget33"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            >
        <LinearLayout
            android:id="@+id/Afegir_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="@color/yellow"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/afegir_punt_carrega"
                android:gravity="center"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Direccio_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:paddingTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                android:text="@string/direccio"
                android:gravity="start"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Poblacio_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Poblacio"
                android:inputType="text"
                android:hint= "@string/poblacio"
                android:textColorHint="@color/grey_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="start"
                android:layout_marginStart="16dp"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Lloc_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Street"
                android:layout_width="0dp"
                android:inputType="text"
                android:hint= "@string/carrer"
                android:textColorHint="@color/grey_hint"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                android:layout_weight="2"/>

            <EditText
                android:id="@+id/Number"
                android:layout_width="0dp"
                android:inputType="number"
                android:hint= "@string/numero"
                android:textColorHint="@color/grey_hint"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Acces_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:paddingTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_marginStart="16dp"
                android:text="@string/acces"
                android:gravity="start"
                android:layout_weight="2" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/Public_or_private"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/Public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginEnd="32dp"
                android:checked="false"
                android:text="@string/publics" />

            <RadioButton
                android:id="@+id/Privat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:checked="false"
                android:layout_marginEnd="16dp"
                android:text="@string/privat" />

            <RadioButton
                android:id="@+id/Particular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:checked="false"
                android:text="@string/particular" />

        </RadioGroup>

            <LinearLayout
                android:id="@+id/Horari_layout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:orientation="horizontal"
                android:paddingTop="0dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:text="@string/horari"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

            </LinearLayout>

        <LinearLayout
            android:id="@+id/Horari_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Horari"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                android:gravity="start"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Conector"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:paddingTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight="2"
                android:gravity="start"
                android:text="@string/conector"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:text="Conector (max 3)" />
        </LinearLayout>

            <RadioGroup
                android:id="@+id/tipus_connector_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">


                <RadioButton
                    android:id="@+id/Fast"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:checked="false"
                    android:drawableStart="@mipmap/fast_acces"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/fast"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/Rapid"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:checked="false"
                    android:drawableStart="@mipmap/rapid_acces"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/rapid"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/Slow"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:checked="false"
                    android:drawableStart="@mipmap/slow_acces"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/slow"
                    android:textSize="20sp" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/tipus_connector_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">


                <RadioButton
                    android:id="@+id/Fast"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:checked="false"
                    android:drawableStart="@mipmap/fast_acces"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/fast"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/Rapid"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:checked="false"
                    android:drawableStart="@mipmap/rapid_acces"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/rapid"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/Slow"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:checked="false"
                    android:drawableStart="@mipmap/slow_acces"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/slow"
                    android:textSize="20sp" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/tipus_connector_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">


                <RadioButton
                    android:id="@+id/Fast"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:checked="false"
                    android:drawableStart="@mipmap/fast_acces"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/fast"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/Rapid"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:checked="false"
                    android:drawableStart="@mipmap/rapid_acces"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/rapid"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/Slow"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:checked="false"
                    android:drawableStart="@mipmap/slow_acces"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/slow"
                    android:textSize="20sp" />
            </RadioGroup>

            <LinearLayout
            style="@android:style/ButtonBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/white"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/GuardarBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:textSize="24sp"
                android:layout_weight="1"
                android:text="@string/guardar" />

            <Button
                android:id="@+id/CancelarBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="24sp"
                android:layout_weight="1"
                android:text="@string/cancelar" />
        </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
